--- a/src/GPS_Shadow_Tracker_Web/requirements.txt
+++ b/src/GPS_Shadow_Tracker_Web/requirements.txt
@@ -16,9 +16,11 @@ lxml==4.9.1
 Markdown==3.3.4
 MarkupSafe==2.1.1
 numpy==1.23.3
+pandas==1.5.0
 Pillow==8.1.0
 PyPDF2==2.10.9
 pypiwin32==223
+python-dateutil==2.8.2
 python-docx==0.8.11
 pytz==2020.5
 requests==2.25.1
