--- a/src/GPS_Shadow_Tracker_Web/requirements.txt
+++ b/src/GPS_Shadow_Tracker_Web/requirements.txt
@@ -18,6 +18,7 @@ MarkupSafe==2.1.1
 numpy==1.23.3
 pandas==1.5.0
 Pillow==8.1.0
+gunicorn==20.1.0
 python-dateutil==2.8.2
 python-docx==0.8.11
 pytz==2020.5
