--- a/src/GPS_Shadow_Tracker_Web/requirements.txt
+++ b/src/GPS_Shadow_Tracker_Web/requirements.txt
@@ -19,6 +19,7 @@ numpy==1.23.3
 pandas==1.5.0
 Pillow==8.1.0
 gunicorn==20.1.0
+psycopg2-binary==2.8.6
 python-dateutil==2.8.2
 python-docx==0.8.11
 pytz==2020.5
@@ -31,3 +32,4 @@ urllib3==1.26.3
 wincertstore==0.2
 wrapt==1.12.1
 whitenoise==6.2.0
+
