--- a/src/GPS_Shadow_Tracker_Web/requirements.txt
+++ b/src/GPS_Shadow_Tracker_Web/requirements.txt
@@ -1,12 +1,18 @@
 chardet==4.0.0
+asgiref==3.5.2
+autobahn==22.7.1
 colorama==0.4.4
-Django==2.2.17
+channels==4.0.0
+channels-redis==4.0.0
+daphne==4.0.0
+Deprecated==1.2.13
+Django==4.1.3
+django-channels==0.7.0
 django-cors-headers==3.7.0
 django-filter==2.4.0
 django-registration-redux==2.2
 django-rest-framework==0.1.0
 djangorestframework==3.12.4
-docx2pdf==0.1.8
 docxcompose==1.3.5
 docxtpl==0.16.4
 future==0.18.2
