--- a/src/GPS_Shadow_Tracker_Web/Procfile
+++ b/src/GPS_Shadow_Tracker_Web/Procfile
@@ -1,1 +1,1 @@
-web: python manage.py migrate && gunicorn GPS_Shadow_Tracker_Web.asgi
+web: python manage.py migrate && daphne GPS_Shadow_Tracker_Web.asgi
