--- a/src/GPS_Shadow_Tracker_Web/Procfile
+++ b/src/GPS_Shadow_Tracker_Web/Procfile
@@ -1,3 +1,2 @@
-heroku config:set DISABLE_COLLECTSTATIC=1
-
-web: python manage.py migrate && daphne GPS_Shadow_Tracker_Web.asgi:application --port $PORT --bind 0.0.0.0 -v2
+web: daphne GPS_Shadow_Tracker_Web.asgi:application --port $PORT --bind 0.0.0.0 -v2
+worker: python manage.py runworker channel_layer -v2
