--- a/src/GPS_Shadow_Tracker_App/app/build.gradle
+++ b/src/GPS_Shadow_Tracker_App/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -46,6 +47,9 @@ dependencies {
     implementation("com.android.volley:volley:1.2.1")
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
     implementation 'org.java-websocket:Java-WebSocket:1.5.1'
+    implementation 'com.squareup.mosh:moshi:1.14.0'
+    implementation 'com.google.code.gson:gson:2.9.1'
+    kapt 'com.squareup.moshi:moshi:1.14.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
