--- a/src/GPS_Shadow_Tracker_App/app/build.gradle
+++ b/src/GPS_Shadow_Tracker_App/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation("com.android.volley:volley:1.2.1")
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
     implementation 'org.java-websocket:Java-WebSocket:1.5.1'
+    implementation("com.squareup.okhttp3:okhttp:4.10.0")
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
