--- a/src/GPS_Shadow_Tracker_App/app/build.gradle
+++ b/src/GPS_Shadow_Tracker_App/app/build.gradle
@@ -7,16 +7,21 @@ plugins {
 
 android {
     namespace 'com.example.gps_shadow_tracker_app'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.gps_shadow_tracker_app"
         minSdk 21
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+
+    buildFeatures {
+        compose true
+        viewBinding true
     }
 
     buildTypes {
@@ -25,6 +30,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    composeOptions {
+        kotlinCompilerExtensionVersion '1.1.1'
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -37,6 +47,10 @@ android {
 
 dependencies {
 
+    implementation "androidx.compose.material3:material3:1.0.1"
+    implementation "androidx.compose.ui:ui-tooling-preview:1.3.2"
+    implementation "androidx.activity:activity-compose:1.6.1"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:compose-theme-adapter:1.1.16'
@@ -45,6 +59,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.fragment:fragment-ktx:1.5.4'
     implementation 'androidx.fragment:fragment:1.5.4'
+    implementation 'com.google.maps.android:maps-compose:2.7.2'
     implementation 'com.google.android.gms:play-services-location:19.0.1'
     implementation("com.android.volley:volley:1.2.1")
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
@@ -52,6 +67,9 @@ dependencies {
     implementation("com.squareup.okhttp3:okhttp:4.10.0")
     implementation 'com.google.code.gson:gson:2.10'
     testImplementation 'junit:junit:4.13.2'
+    debugImplementation "androidx.compose.ui:ui-tooling:1.3.2"
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.3.2"
+    debugImplementation "androidx.compose.ui:ui-test-manifest:1.3.2"
 }
