--- a/src/GPS_Shadow_Tracker_Web_Node/package.json
+++ b/src/GPS_Shadow_Tracker_Web_Node/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.29.4",
     "mongo": "^0.1.0",
     "mongodb": "^4.11.0",
+    "mongoose": "^6.8.3",
     "redis": "^4.5.1",
     "ws": "^8.11.0"
   },
