--- a/src/GPS_Shadow_Tracker_Web_Node/package.json
+++ b/src/GPS_Shadow_Tracker_Web_Node/package.json
@@ -6,11 +6,13 @@
   "scripts": {
     "test": "npm run test",
     "run:dev": "nodemon index.js",
-    "run": "node index.js"
+    "run": "node index.js",
+    "build:front": "webpack"
   },
   "author": "Robbert Sinclair",
   "license": "ISC",
   "dependencies": {
+    "chart.js": "^4.2.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "gps": "^0.6.1",
@@ -19,11 +21,23 @@
     "mongo": "^0.1.0",
     "mongodb": "^4.11.0",
     "mongoose": "^6.8.3",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
     "redis": "^4.5.1",
     "ws": "^8.11.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "babel-loader": "^9.1.2",
+    "css-loader": "^6.7.3",
     "jest": "^29.3.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "postcss-loader": "^7.0.2",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   }
 }
