--- a/src/GPS_Shadow_Tracker_Web_Node/package.json
+++ b/src/GPS_Shadow_Tracker_Web_Node/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "gps": "^0.6.1",
     "great-circle-distance": "^1.0.2",
+    "leaflet": "^1.9.3",
     "moment": "^2.29.4",
     "mongo": "^0.1.0",
     "mongodb": "^4.11.0",
@@ -24,6 +25,7 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.0",
     "redis": "^4.5.1",
     "ws": "^8.11.0"
   },
